# ups-rs

./: .gitignore  Cargo.toml  License.md  Readme.md  ups_spec.md
src/: crc32.rs  lib.rs  ups.rs  ups_error.rs  ups_patch.rs
tests/: common.rs  errors.rs  final1.txt  final2.txt  patch.ups  patch2.ups  source.txt  ups.rs  usage.rs
