[package]
name = "ups"
version = "0.1.0"
authors = ["David (Laikar)"]
edition = "2018"
description = "A rust implementaiton of a UPS file patcher"
homepage = "https://github.com/Laikar/ups-rs"
repository = "https://github.com/Laikar/ups-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
