[package]
name = "ups"
version = "0.2.0"
authors = ["David (Laikar)"]
edition = "2018"
description = "A rust implementaiton of a UPS file patcher"
homepage = "https://gitlab.com/Laikar/ups-rs"
repository = "https://gitlab.com/Laikar/ups-rs"
license = "MIT"
exclude= [
    "ups-spec.pdf",
    "ups_spec.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "usage_tests"
path = "tests/usage.rs"

[[test]]
name = "error_tests"
path = "tests/errors.rs"

[dependencies]
